# sevenzip-ffi

./: .gitignore  7zsdk.code-workspace  ADVANCED_FEATURES.md  BUILD_AND_USAGE.md  CMakeLists.txt  CONTRIBUTING.md  LARGE_FILES_GUIDE.md  LZMA_SDK_OPTIMIZATION.md  MEMORY_SAFETY.md  QUICKSTART.md  README-rust.md  README.md  SETUP.md  TODO.md  test_all_levels.sh
.github/workflows/: ci.yml
docs/: 7Z_CREATION_STATUS.md
examples/: test_encryption.c
include/: 7z_ffi.h
rust/: BUILD_GUIDE.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  INCOMPLETE_ANALYSIS.md  QUICK_START.md  README_RUST_BINDINGS.md
rust/examples/: forensic_archiver.rs
rust/src/: archive.rs  ffi.rs
src/: archive_create.c  archive_create_custom.c  archive_create_multivolume.c  archive_create_true_streaming.c  archive_extract.c  archive_extract_custom.c  archive_extract_split.c  archive_list.c  archive_multivolume_legacy.c  archive_stream_api.c  archive_stream_impl.c  archive_test.c  encryption_aes.c  encryption_aes.h  error_reporting.c  ffi_interface.c  lzma_compress.c  lzma_decompress.c
tauri/: tauri-integration.md
tests/: CMakeLists.txt  test_compress.c  test_extract.c
